# trAIder

./: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  pyproject.toml
legacy_fastapi/: database.py  main.py  models.py  schemas.py
legacy_fastapi/services/: auth.py  coach.py
legacy_fastapi/static/: app.js  auth.js  styles.css
legacy_fastapi/templates/: app.html  login.html
src/app/: auth-actions.ts  globals.css  layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/app/api/market-snapshot/: route.ts
src/app/auth/callback/: route.ts
src/app/login/: page.tsx
src/app/workspace/: page.tsx
src/components/: chat-workspace.tsx  logo-mark.tsx  market-hover-strip.tsx  notification-bell.tsx  workspace-panels.tsx  workspace-shell.tsx
src/lib/: coach.ts  data.ts  display-name.ts  market.ts  trade-calendar.ts
src/lib/supabase/: client.ts  env.ts  middleware.ts  server.ts
supabase/migrations/: 202603260001_traider.sql  202603270001_conversation_titles.sql  202603280001_profile_notifications.sql  202603300001_message_attachment_previews.sql  202603310001_trade_calendar.sql
