[project]
name = "traider"
version = "0.1.0"
description = "trAIder: an ultra-simple AI trading coach."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "itsdangerous>=2.2.0",
  "jinja2>=3.1.4",
  "openai>=1.54.0",
  "python-multipart>=0.0.12",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.32.0",
]

[tool.uvicorn]
factory = false
host = "127.0.0.1"
port = 8000
reload = true
